2001-11-05  Paul Eggert  <eggert@twinsun.com>

	* lib/am/distdir.am (am__remove_distdir):
	New macro.  Do not change permission of non-directories.
	Change only user permission, as there's no point to changing group
	or other permission.
	(distdir, dist, dist-bzip2, dist-tarZ, dist-shar, dist-zip, dist-all,
	 distcheck): Use it.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/python.am: Cleanup the cleaning section.
	* automake.texi (Python): Remove documentation for PYCFILES
	and PYOFILES.  Update the first paragraphes.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (FOREIGN, GNU, GNITS, AC_CANONICAL_HOST,
	AC_CANONICAL_SYSTEM, MOSTLY_CLEAN, DIST_CLEAN): Define as constants.
	Adjust usage everywhere.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (libtool_files, libtool_sometimes, common_files,
	common_sometimes, config_aux_path): Use qw to simplify definition.
	(scan_texinfo_file) <clean_suffixes, predefined_index,
	hidden_index>: Likewise.
	(scan_autoconf_traces) <traced>: Likewise.
	(scan_one_autoconf_file, check_gnu_standards, resolve_linker):
	Likewise.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_single_transform_list): Pass $nonansi_obj to
	derive_suffix.  Don't use an hardcoded 'o' for object extensions.
	(derive_suffix): Accept $OBJ as a second argument, don't
	hardcode 'o'.
	* tests/suffix5.test: New test.
	* tests/Makefile.am (TESTS): Add suffix5.test.
	Reported by Arkadiusz Miskiewicz <misiek@pld.ORG.PL>.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_single_transform_list): Don't call
	$lang->target_hook for undefinied langages.
	* tests/suffix4.test: New test.
	* tests/Makefile.am (TESTS): Add suffix4.test.
	Reported by Dmitry Mikhin <dmitrym@acres.com.au>.

2001-11-05  Akim Demaille  <akim@epita.fr>

	* automake.in (@common_sometimes, &handle_configure): No longer
	use stamp-hin.
	* lib/am/remake-hdr.am: Adjust.