@@ -16,24 +16,25 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 
-.PHONY: distdir
-
 ## DIST_COMMON comes first so that README can be the very first file.
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 
 top_distdir = %TOP_DISTDIR%
 if %?TOPDIR_P%
-# Avoid unsightly `./'.
+## Avoid unsightly `./'.
 ?DISTDIR?distdir = $(PACKAGE)-$(VERSION)
 else !%?TOPDIR_P%
 ?DISTDIR?distdir = $(top_distdir)/$(PACKAGE)-$(VERSION)
 endif !%?TOPDIR_P%
 
+if %?TOPDIR_P%
 am__remove_distdir = \
   { test ! -d $(distdir) \
     || { find $(distdir) -type d ! -perm -200 -exec chmod u+w {} ';' \
          && rm -fr $(distdir); }; }
+endif %?TOPDIR_P%
 
+.PHONY: distdir
 distdir: $(DISTFILES)
 ##
 ## For Gnits users, this is pretty handy.  Look at 15 lines
