@@ -1,3 +1,7 @@
+2001-11-07  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* lib/am/distdir.am (am__remove_distdir): Define in topdir only.
+
 2001-11-05  Paul Eggert  <eggert@twinsun.com>
 
 	* lib/am/distdir.am (am__remove_distdir):
